# chess

./: .gitignore  MANIFEST.in  README.md  pyproject.toml
src/chess/: __init__.py  __main__.py  chess_game.py  chess_gui.py
