[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[project]
name = "chess"
version = "0.8.0"
authors = [
  { name="Martin Carlos Araya", email="martinaraya@gmail.com" },
]
description = "a chess game built using AI to generate the code and images."
readme = "README.md"
license = { file="LICENSE" }
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    ]
[project.urls]
"Homepage" = "https://github.com/ayaranitram/chess"
"Bug Tracker" = "https://github.com/ayaranitram/chess/issues"
